src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
/* 

*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
a {
    text-decoration: none;
  color: currentColor;
  text-decoration: none;
}
body {
  background: url(../src/assets/squidgame-s3-hed.jpg) no-repeat center center / cover;
  width: 100%;
  color: #fff;
  font-family: 'Poppins', sans-serif;
  height: 100vh;
}
.sub {
  background-color:#2e5d15;
  padding: 10px;
  border-radius: 5px;
}
button {
  background-color: transparent;
  border: none;
  cursor: pointer;
}
.headerLinks{
  display: flex;
  justify-content: center;
  gap: 15px;
  align-items: center;
}

.headerLinks button i {
  color: white;
  font-size: 1.6rem;
}

.chooseLinks {
  display: flex;
  gap: 20px;
}

.chooseLinks a:hover , .headerLinks .log:hover {
  background-color: transparent;
  color: #2e5d15;
}


.header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 10px;
}
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  flex-direction: column;
  height: 70vh;
}

.tagline {
  font-size: 1.2rem;
  color: #ccc;
  margin-bottom: 30px;
}

.watch-btn {
  background-color: #2e5d15;
  color: rgb(226, 220, 220);
  border: none;
  border-radius: 5px;
  padding: 12px 28px;
  font-size: 1rem;
  cursor: pointer;
  transition: all 0.3s ease;
}

a:hover {
  background-color:  #1b380b;
}

.footer {
  position: relative;
  bottom: 0;

}

@media (max-width: 700px) {
  .chooseLinks {
    display: none;
  }

  a {
    padding: 7px;
  }
}

